fixed UI problem on iphone

--- a/Messenger.Frontend/src/index.css
+++ b/Messenger.Frontend/src/index.css
@@ -9,11 +9,16 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
-
+#root{
+	height: 100%;
+}
 .scroll-none::-webkit-scrollbar {
 	display: none;
 }
 .text-stroke {
 	-webkit-text-stroke-width: 1.2px;
 	-webkit-text-stroke-color: #43417d;
+}
+.height{
+	height: 756px;
 }
